--- a/index.html
+++ b/index.html
@@ -64,5 +64,7 @@
     </form>
     <p>You can also find me on <a href="https://github.com/elsacmonteiro" target="_blank">GitHub</a>.</p>
   </section>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
