--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<head>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Elsa Monteiro - Portfolio</title>
-  <!-- Font Import for Impactful Titles -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -17,11 +17,11 @@
     </nav>
   </header>
 
-  <section id="welcome-section">
+  <section id="welcome-section" data-aos="fade-up">
     <h1>Welcome to my Portfolio</h1>
   </section>
 
-  <section id="about">
+  <section id="about" data-aos="fade-up">
     <h2>About Me</h2>
     <p>
       My name is Elsa Monteiro, I am 31 years old, and I am from Porto, Portugal. I recently started programming, and since 2021, I have been working in technology companies, specifically in the software field, which sparked my interest in this area. I hold a degree in Marketing and a Postgraduate degree in Sales Management.
@@ -31,20 +31,20 @@
     </p>
   </section>
 
-  <section id="projects">
+  <section id="projects" data-aos="fade-up">
     <h2>My Projects</h2>
     <div class="project-container">
-      <div class="project-tile">
+      <div class="project-tile" data-aos="zoom-in">
         <h3>Software Demo Landing Page</h3>
         <p>A modern landing page showcasing software features and pricing tiers.</p>
         <a href="https://elsacmonteiro.github.io/software-demo-landing-page/" target="_blank">View Project</a>
       </div>
-      <div class="project-tile">
+      <div class="project-tile" data-aos="zoom-in">
         <h3>Arctic Monkeys Tribute Page</h3>
         <p>A tribute to the iconic band, Arctic Monkeys, featuring their history and music.</p>
         <a href="https://elsacmonteiro.github.io/arctic-monkeys-tribute-page/" target="_blank">View Project</a>
       </div>
-      <div class="project-tile">
+      <div class="project-tile" data-aos="zoom-in">
         <h3>Cloud Software Landing Page</h3>
         <p>A modern landing page for a software solution with pricing options and features.</p>
         <a href="https://elsacmonteiro.github.io/cloud-software-landing-page/" target="_blank">View Project</a>
@@ -53,7 +53,7 @@
     <p>For more projects, visit my <a id="profile-link" href="https://github.com/elsacmonteiro" target="_blank">GitHub Profile</a>.</p>
   </section>
 
-  <section id="contact">
+  <section id="contact" data-aos="fade-up">
     <h2>Contact Me</h2>
     <form id="contact-form" action="https://example.com/submit-form" method="post">
       <input type="text" name="name" placeholder="Your Name" required>
@@ -64,7 +64,8 @@
     </form>
     <p>You can also find me on <a href="https://github.com/elsacmonteiro" target="_blank">GitHub</a>.</p>
   </section>
+
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
